--- a/contact.css
+++ b/contact.css
@@ -1,7 +1,7 @@
 body{
    
     text-align: center,right-margin=20%;
-    background-image:linear-gradient(orange,white);
+   background-image: linear-gradient(rgb(172, 64, 21),white);
     margin-left: 20%;
     margin-right:20%;
     
